# tempus-project

./: .build_dev.sh  .editorconfig  .gitignore  .update_deps.sh  LICENSE  README.md  pyproject.toml  requirements.frozen  setup.py
annotation_results/: annotations.csv  metadata.json
data/: test_vcf_min.txt
data/sample_output/: annotations.csv
data/sample_output_min/: annotations.csv
src/varanno/: __init__.py  __main__.py  allele.py  cli.py  fileio.py  parse.py  record.py  utils.py  varanno.py  vcf.py  vep.py
tests/: __init__.py  test_allele.py  test_parse.py  test_record.py  test_utils.py  test_varanno.py  test_vcf.py  test_vep.py
tests/fixtures/: hgvs_response.json  hgvs_response_missing_result.json  not_a_vcf_file.txt  test_vcf_min.txt  vep_hgvs_response.json  vep_hgvs_response_rec1.json  vep_region_response.json  vep_response_195198876.json  vep_response_5.33954511.json  vep_response_intergenic.json
