[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varanno"
version = "0.0.1"
authors = [
    { name = "Alyss Flynn", email = "alyss.flynn@me.com" }
]
description = "Varanno is a prototype variant annotation tool written in python."
license = { text = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy==2.1.2",
    "pandas==2.2.3",
    "requests==2.32.3",
    "pydash==8.0.3"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests"
]

[project.scripts]
varanno = "varanno.cli:run_annotation"
